--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fd-polymer-rest-service",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "keywords": [
     "seed",
     "polymer",
@@ -10,9 +10,25 @@
   "dependencies": {
     "polymer": "~0.4.2",
     "core-ajax": "polymer/core-ajax#~0.4.2",
-    "fd-polymer-api-settings": "~0.1.2"
+    "fd-polymer-api-settings": "~0.1.4"
   },
   "devDependencies": {
     "polymer-test-tools": "Polymer/polymer-test-tools#^0.4.0"
-  }
+  },
+  "homepage": "https://github.com/freedomotic/fd-polymer-rest-service",
+  "authors": [
+    "Matteo Mazzoni <matteo@freedomotic.com>",
+    "Niko Zarzani <niko.zarzani@nautes.com>"
+  ],
+  "description": "Element providing DAO for Freedomotic API settings",
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "../",
+    "test",
+    "tests"
+  ]
+}
 }
