Fix in bower.json

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,8 @@
 {
   "name": "fd-polymer-rest-service",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "keywords": [
+    "freedomotic",
     "seed",
     "polymer",
     "web-components"
@@ -31,4 +32,4 @@
     "tests"
   ]
 }
-}
+
